--- a/layouts/partials/avatar.html
+++ b/layouts/partials/avatar.html
@@ -1,4 +1,4 @@
 <header class="row text-center header">
   {{ with .Site.Params.authorImage }} <img src="img/{{ . }}" alt="Author Image" class="img-circle text-center headshot"> {{ end }}
-  <h1 class="author">{{ .Site.Author }}</h1>
+  <h1 class="author">{{ .Site.Params.author }}</h1>
 </header>
