--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -10,5 +10,5 @@
   <span><a class="menu-item" href="{{ .Permalink }}"> | next &gt;</a></span>
   {{ end }}
   {{ end }}
-  <h4 class="text-center"><a class="menu-item" href="/">home</a></h4>
+  <h4 class="text-center"><a class="menu-item" href="{{ .Site.BaseURL }}">home</a></h4>
 </section>
