Add disqus commenting

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,6 +2,8 @@
 
 {{ partial "content.html" . }}
 
+{{ template "_internal/disqus.html" . }}
+
 {{ partial "menu.html" . }}
 
 {{ partial "footer.html" . }}
