Add settings to readme

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,11 @@
 
 {{ partial "content.html" . }}
 
+{{ if ne .Params.showcomments false }}
+
 {{ template "_internal/disqus.html" . }}
+
+{{ end }}
 
 {{ partial "menu.html" . }}
 
