Add stackoverflow to social

--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -17,6 +17,9 @@
   {{ with .Site.Params.social.linkedIn }}
   <a href="https://linkedin.com/in/{{.}}"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
   {{ end }}
+  {{ with .Site.Params.social.stackoverflow }}
+  <a href="https://stackoverflow.com/users/{{.}}"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+  {{ end }}
   {{ with .Site.Params.social.email }}
   <a href="mailto:{{.}}"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
   {{ end }}
