Hugo v0.20.2, fixed 'error calling len: len of untyped nil' related with categories and tags

--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -6,12 +6,14 @@
   <div class="col-md-12">
     <h6 class="text-left meta">
       PUBLISHED ON {{ .Date.Format .Site.Params.dateformat | upper }} 
+      {{ if isset .Params "categories" }}
       {{ $total := len .Params.categories }}
       {{ if gt $total 0 }}
       — 
       {{ $total := sub $total 1 }}
       {{ range $i, $cat := sort $.Params.categories }}
       <a class="meta" href="{{ "/categories/" | relURL }}{{ $cat | urlize }}">{{ $cat | upper }}</a>{{ if lt $i $total }}, {{ end }}
+      {{ end }}
       {{ end }}
       {{ end }}
     </h6>
@@ -27,12 +29,14 @@
   {{ if ne .Params.showpagemeta false }}
   <div class="col-md-12">
     <h6 class="text-right meta">
+      {{ if isset .Params "tags" }}
       {{ $total := len .Params.tags }}
       {{ if gt $total 0 }}
       TAGS: 
       {{ $subtotal := sub $total 1 }}
       {{ range $i, $tag := sort $.Params.tags }}
       <a class="meta" href="{{ "/tags/" | relURL }}{{ $tag | urlize }}">{{ $tag | upper }}</a>{{ if lt $i $subtotal }}, {{ end }}
+      {{ end }}
       {{ end }}
       {{ end }}
     </h6>
