--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -20,6 +20,15 @@
   {{ with .Site.Params.social.stackoverflow }}
   <a href="https://stackoverflow.com/users/{{.}}"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
   {{ end }}
+  {{ with .Site.Params.social.medium}}
+  <a href="https://medium.com/{{.}}"><i class="fa fa-medium" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.devto}}
+  <a href="https://dev.to/{{.}}"><i class="fa fa-terminal" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.angellist}}
+  <a href="https://angel.co/{{.}}"><i class="fa fa-angellist" aria-hidden="true"></i></a>
+  {{ end }}
   {{ with .Site.Params.social.email }}
   <a href="mailto:{{.}}"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
   {{ end }}
