--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -32,4 +32,7 @@
   {{ with .Site.Params.social.email }}
   <a href="mailto:{{.}}"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
   {{ end }}
+  {{ with .Site.Params.social.xing }}
+  <a href="https://www.xing.com/profile/{{.}}"><i class="fa fa-xing" aria-hidden="true"></i></a>
+  {{ end }}
 </section>
