--- a/layouts/partials/li.html
+++ b/layouts/partials/li.html
@@ -4,7 +4,7 @@
     <li class="list-entry">
       <a class="list-entry-link" href="{{ .Permalink }}">{{ .Title }}</a>
       <p class="meta">
-        {{ .Date.Format .Site.Params.dateformat | upper }}
+        {{ if not .Date.IsZero }} {{ .Date.Format .Site.Params.dateformat | upper }} {{end}}
         <span class="category">
         {{ if isset .Params "categories" }}
         {{ $total := len .Params.categories }}
