--- a/layouts/partials/info.html
+++ b/layouts/partials/info.html
@@ -5,4 +5,10 @@
   {{ with .Site.Params.description }}
   <h4 class="description">{{ . | markdownify }}</h4>
   {{ end }}
+  {{ with .Site.Params.now }}
+  <h4 class="description">{{ . | markdownify }}</h4>
+  {{ end }}
+  {{ with .Site.Params.then }}
+  <h5 class="description">{{ . | markdownify }}</h4>
+  {{ end }}
 </section>
