Changed the colors of links

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,7 +56,7 @@ html
 }
 .category
 {
-    color: #966 !important;
+    color: #526d7a !important;
 }
 .container
 {
@@ -189,7 +189,7 @@ h3.intro
 
     text-decoration: none;
 
-    color: #966 !important;
+    color: #526d7a !important;
 }
 .meta
 {
@@ -201,7 +201,7 @@ h3.intro
 }
 a.meta
 {
-    color: #966;
+    color: #526d7a;
 }
 h6.meta
 {
