--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,8 +17,8 @@
 {{ .Hugo.Generator }}
 
 {{ if .RSSLink }}
-  <link href="{{ . }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-  <link href="{{ . }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
+  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+  <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
 {{ end }}
 
 {{ if .Site.Params.extra.highlightjs }}
