--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -11,6 +11,9 @@
   {{ with .Site.Params.social.github }}
   <a href="https://github.com/{{.}}"><i class="fa fa-github" aria-hidden="true"></i></a>
   {{ end }}
+  {{ with .Site.Params.social.keybase }}
+  <a href="https://keybase.io/{{.}}"><i class="fa fa-keybase" aria-hidden="true"></i></a>
+  {{ end }}
   {{ with .Site.Params.social.instagram }}
   <a href="https://instagram.com/{{.}}"><i class="fa fa-instagram" aria-hidden="true"></i></a>
   {{ end }}
