--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -5,6 +5,12 @@
   {{ with .Site.Params.social.google }}
   <a href="https://plus.google.com/{{.}}/about" aria-label="Google Plus"><i class="fab fa-google-plus" aria-hidden="true"></i></a>
   {{ end }}
+  {{ with .Site.Params.social.goodreads }}
+  <a href="https://www.goodreads.com/user/show/{{.}}" aria-label="Goodreads"><i class="fab fa-goodreads" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.lastfm }}
+  <a href="https://www.last.fm/user/{{.}}/" aria-label="Last.fm"><i class="fab fa-lastfm" aria-hidden="true"></i></a>
+  {{ end }}
   {{ with .Site.Params.social.facebook }}
   <a href="https://facebook.com/{{.}}" aria-label="Facebook"><i class="fab fa-facebook" aria-hidden="true"></i></a>
   {{ end }}
@@ -29,11 +35,71 @@
   {{ with .Site.Params.social.angellist}}
   <a href="https://angel.co/{{.}}" aria-label="AngelList"><i class="fab fa-angellist" aria-hidden="true"></i></a>
   {{ end }}
-  {{ with .Site.Params.social.email }}
-  <a href="mailto:{{.}}" aria-label="Email"><i class="fas fa-envelope-o" aria-hidden="true"></i></a>
-  {{ end }}
   {{ with .Site.Params.social.xing }}
   <a href="https://www.xing.com/profile/{{.}}" aria-label="Xing"><i class="fab fa-xing" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.gitlab}}
+  <a href="https://gitlab.com/{{.}}" aria-label="Gitlab"><i class="fab fa-gitlab" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.bitbucket}}
+  <a href="https://bitbucket.org/{{.}}" aria-label="Bitbucket"><i class="fab fa-bitbucket" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.fivehundredpx}}
+  <a href="https://500px.com/{{.}}" aria-label="500px"><i class="fab fa-500px" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.flickr}}
+  <a href="https://flickr.com/photos/{{.}}" aria-label="Flickr"><i class="fab fa-flickr" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.foursquare}}
+  <a href="https://foursquare.com/{{.}}" aria-label="Foursquare"><i class="fab fa-foursquare" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.hackernews}}
+  <a href="https://news.ycombinator.com/user?id={{.}}" aria-label="Y Combinator Hackernews"><i class="fab fa-hacker-news" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.kickstarter}}
+  <a href="https://kickstarter.com/profile/{{.}}" aria-label="Kickstarter"><i class="fab fa-kickstarter" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.patreon}}
+  <a href="https://patreon.com/{{.}}" aria-label="Patreon"><i class="fab fa-patreon" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.pintrest}}
+  <a href="https://pintrest.com/{{.}}" aria-label="Pintrest"><i class="fab fa-pintrest" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.steam}}
+  <a href="https://steamcommunity.com/id/{{.}}" aria-label="Steam"><i class="fab fa-steam" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.reddit}}
+  <a href="https://www.reddit.com/user/{{.}}" aria-label="Reddit"><i class="fab fa-reddit" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.snapchat}}
+  <a href="https://snapchat.com/add/{{.}}" aria-label="Snapchat"><i class="fab fa-snapchat" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.youtube}}
+  <a href="https://youtube.com/user/{{.}}" aria-label="Youtube"><i class="fab fa-youtube" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.keybase}}
+  <a href="https://keybase.io/{{.}}" aria-label="Keybase"><i class="fab fa-keybase" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.twitch}}
+  <a href="https://www.twitch.tv/{{.}}" aria-label="Twitch"><i class="fab fa-twitch" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.soundcloud}}
+  <a href="https://soundcloud.com/{{.}}" aria-label="Soundcloud"><i class="fab fa-soundcloud" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.tumblr}}
+  <a href="https://{{.}}.tumblr.com" aria-label="Tumblr"><i class="fab fa-tumblr" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.skype}}
+  <a href="skype:{{.}}" aria-label="Skype"><i class="fab fa-skype" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.telegram}}
+  <a href="https://t.me/{{.}}" aria-label="Telegram"><i class="fab fa-telegram" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.whatsapp}}
+  <a href="https://wa.me/{{.}}" aria-label="Whatsapp"><i class="fab fa-whatsapp" aria-hidden="true"></i></a>
+  {{ end }}
+  {{ with .Site.Params.social.email }}
+  <a href="mailto:{{.}}" aria-label="Email"><i class="fas fa-envelope-o" aria-hidden="true"></i></a>
   {{ end }}
   {{ if and ( .Site.Params.extra.rss ) ( .RSSLink ) }}
   <a href="{{ .RSSLink }}" aria-label="RSS"><i class="fas fa-rss" aria-hidden="true"></i></a>
