--- a/layouts/partials/info.html
+++ b/layouts/partials/info.html
@@ -5,10 +5,13 @@
   {{ with .Site.Params.description }}
   <h4 class="description">{{ . | markdownify }}</h4>
   {{ end }}
+  {{ with .Site.Params.location }}
+  <h5 class="description">{{ . | markdownify }}</h5>
+  {{ end }}
   {{ with .Site.Params.now }}
   <h4 class="description">{{ . | markdownify }}</h4>
   {{ end }}
   {{ with .Site.Params.then }}
-  <h5 class="description">{{ . | markdownify }}</h4>
+  <h5 class="description">{{ . | markdownify }}</h5>
   {{ end }}
 </section>
