Add in official Dev.to FA image
Description:
FontAwesome just released an official Dev.to icon and I've included
the CDN and the icon image for the social link.

--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -24,7 +24,7 @@
   <a href="https://medium.com/{{.}}"><i class="fa fa-medium" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.devto}}
-  <a href="https://dev.to/{{.}}"><i class="fa fa-terminal" aria-hidden="true"></i></a>
+  <a href="https://dev.to/{{.}}"><i class="fab fa-dev"></i></a>
   {{ end }}
   {{ with .Site.Params.social.angellist}}
   <a href="https://angel.co/{{.}}"><i class="fa fa-angellist" aria-hidden="true"></i></a>
