--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,53 +1,53 @@
 <section id="social-pane" class="row text-center social">
   {{ with .Site.Params.social.email }}
-  <a href="mailto:{{.}}"><i class="fas fa-envelope" aria-hidden="true"></i></a>
+  <a href="mailto:{{.}}" aria-label="Email"><i class="fas fa-envelope" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.twitter }}
-  <a href="https://twitter.com/{{.}}"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+  <a href="https://twitter.com/{{.}}"aria-label="Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.google }}
-  <a href="https://plus.google.com/{{.}}/about"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a>
+  <a href="https://plus.google.com/{{.}}/about" aria-label="Google Plus"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.facebook }}
-  <a href="https://facebook.com/{{.}}"><i class="fab fa-facebook-official" aria-hidden="true"></i></a>
+  <a href="https://facebook.com/{{.}}" aria-label="Facebook"><i class="fab fa-facebook-official" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.github }}
-  <a href="https://github.com/{{.}}"><i class="fab fa-github" aria-hidden="true"></i></a>
+  <a href="https://github.com/{{.}}" aria-label="Github"><i class="fab fa-github" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.instagram }}
-  <a href="https://instagram.com/{{.}}"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+  <a href="https://instagram.com/{{.}}" aria-label="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.linkedin }}
-  <a href="https://linkedin.com/in/{{.}}"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+  <a href="https://linkedin.com/in/{{.}}" aria-label="LinkedIn"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.stackoverflow }}
-  <a href="https://stackoverflow.com/users/{{.}}"><i class="fab fa-stack-overflow" aria-hidden="true"></i></a>
+  <a href="https://stackoverflow.com/users/{{.}}" aria-label="StackOverflow"><i class="fab fa-stack-overflow" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.medium}}
-  <a href="https://medium.com/{{.}}"><i class="fab fa-medium" aria-hidden="true"></i></a>
+  <a href="https://medium.com/{{.}}" aria-label="Medium"><i class="fab fa-medium" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.devto}}
-  <a href="https://dev.to/{{.}}"><i class="fab fa-terminal" aria-hidden="true"></i></a>
+  <a href="https://dev.to/{{.}}" aria-label="Dev.to"><i class="fab fa-terminal" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.angellist}}
-  <a href="https://angel.co/{{.}}"><i class="fa fa-angellist" aria-hidden="true"></i></a>
+  <a href="https://angel.co/{{.}}" aria-label="AngelList"><i class="fa fa-angellist" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.xing }}
-  <a href="https://www.xing.com/profile/{{.}}"><i class="fa fa-xing" aria-hidden="true"></i></a>
+  <a href="https://www.xing.com/profile/{{.}}" aria-label="Email"><i class="fa fa-xing" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.applestackexchange }}
-  <a href="https://apple.stackoverflow.com/users/{{.}}"><i class="fa fa-apple" aria-hidden="true"></i></a>
+  <a href="https://apple.stackoverflow.com/users/{{.}}" aria-label="Apple Stack Exchange"><i class="fa fa-apple" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.stackexchange }}
-  <a href="https://stackexchange.com/users/{{.}}"><i class="fab fa-stack-exchange" aria-hidden="true"></i></a>
+  <a href="https://stackexchange.com/users/{{.}}" aria-label="Stackexchange"><i class="fab fa-stack-exchange" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.reddit }}
-  <a href="https://www.reddit.com/user/{{.}}"><i class="fab fa-reddit-alien" aria-hidden="true"></i></a>
+  <a href="https://www.reddit.com/user/{{.}}" aria-label="Reddit"><i class="fab fa-reddit-alien" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.lastfm }}
-  <a href="https://www.last.fm/user/{{.}}"><i class="fab fa-lastfm-square" aria-hidden="true"></i></a>
+  <a href="https://www.last.fm/user/{{.}}" aria-label="Lastfm"><i class="fab fa-lastfm-square" aria-hidden="true"></i></a>
   {{ end }}
   {{ with .Site.Params.social.goodreads }}
-  <a href="https://www.goodreads.com/user/show/{{.}}"><i class="fab fa-goodreads" aria-hidden="true"></i></a>
+  <a href="https://www.goodreads.com/user/show/{{.}}" aria-label="Goodreads"><i class="fab fa-goodreads" aria-hidden="true"></i></a>
   {{ end }}
 </section>
