--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -5,5 +5,8 @@
   {{ if ne .poweredby false }}
   <h6 class="text-center powered">Powered by <a href="https://gohugo.io/">Hugo</a> &amp; <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.</h6>
   {{ end }}
+      {{ if ne .displayrssicon false }}
+        <h6><a href="https://b4d.sablun.org/index.xml" aria-label="RSS Feed"><i class="fas fa-rss" aria-hidden="true"></i></a></h6>
+    {{ end }}
   {{ end }}
 </footer>
