Underline links in <li> lists. Increased the top margin for headers, to improve readability. Added section with related articles to the end of each blog post.

--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -22,7 +22,13 @@
 </section>
 <section id="content-pane" class="row">
   <div class="col-md-12 text-justify content">
+      {{ if and ( ne .Params.toc false) (gt .WordCount 300 ) }}
+      {{ .TableOfContents }}
+      {{ end }}
     {{ .Content }}
+      {{ if ne .Params.related false }}
+      {{ partial "related.html" . }}  
+      {{ end }}
   </div>
 </section>
 <section id="tag-pane" class="row meta">
