--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -1,9 +1,12 @@
 <footer class="row text-center footer">
   <hr />
   {{ with .Site.Params.extra }}
-  <h6 class="text-center copyright">{{ .copyright | markdownify }}</h6>
-  {{ if ne .poweredby false }}
-  <h6 class="text-center powered">Powered by <a href="https://gohugo.io/">Hugo v{{ hugo.Version }}</a>.</h6>
-  {{ end }}
+    <h6 class="text-center copyright">{{ .copyright | markdownify }}</h6>
+    {{ if ne .poweredby false }}
+        <h6 class="text-center powered">Powered by <a href="https://gohugo.io/">Hugo v{{ hugo.Version }}</a>.</h6>
+    {{ end }}
+    {{ if ne .displayrssicon false }}
+        <h6><a href="https://b4d.sablun.org/index.xml" aria-label="RSS Feed"><i class="fas fa-rss" aria-hidden="true"></i></a></h6>
+    {{ end }}
   {{ end }}
 </footer>
