--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -8,10 +8,12 @@
       Hugo  {{ .Version }}
     </a>
     &amp;
-    <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.</h6>
-  {{ end }}
-      {{ if ne .displayrssicon false }}
-      <h6><a href="{{ .RSSLink }}" aria-label="RSS Feed"><i class="fas fa-rss" aria-hidden="true"></i></a></h6>
-    {{ end }}
+    <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.
+
+    <a href="https://www.netlify.com">
+      <img src="https://www.netlify.com/img/global/badges/netlify-color-bg.svg" alt="Deploys by Netlify" />
+    </a>
+  </h6>
+ 
   {{ end }}
 </footer>
