More footer updates

--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -1,8 +1,7 @@
 <footer class="row text-center footer">
   <hr />
   <h6 class="text-center powered">
-    Powered by <a href="https://gohugo.io/">
-      Hugo  {{ .Version }}
+    Powered by <a href="https://gohugo.io/">Hugo
     </a>
     &amp;
     <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.
