--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -6,8 +6,7 @@
     &amp;
     <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.
 
-    <a href="https://www.netlify.com">
-      <img src="https://www.netlify.com/img/global/badges/netlify-color-bg.svg" alt="Deploys by Netlify" />
-    </a>
+    &nbsp;
+    <a href="https://www.netlify.com">This site is powered by Netlify</a>
   </h6>
  </footer>
