--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -1,12 +1,15 @@
 <footer class="row text-center footer">
   <hr />
   <h6 class="text-center powered">
-    Powered by <a href="https://gohugo.io/">Hugo
-    </a>
+
+    Built with 
+    <a href="https://gohugo.io/">Hugo</a>
     &amp;
     <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.
 
     <br>
-    <a href="https://www.netlify.com">This site is powered by Netlify</a>
+    <a href="https://www.netlify.com">Powered by Netlify</a>
+    <br>
+    
   </h6>
  </footer>
