--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -8,8 +8,10 @@
     <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.
 
     <br>
-    <a href="https://www.netlify.com">Powered by Netlify</a>
     <br>
-    
+    Powered by 
+    <a href="https://www.netlify.com">Netlify</a>
+    <br>
+
   </h6>
  </footer>
