Remove punctuation in footer

--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -5,7 +5,7 @@
     Built with 
     <a href="https://gohugo.io/">Hugo</a>
     &amp;
-    <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.
+    <a href="https://github.com/shenoybr/hugo-goa">Goa</a>
 
     <br>
     <br>
