Upgraded Bootstrap from 3.3.7 to 4.5.2

--- a/layouts/partials/li.html
+++ b/layouts/partials/li.html
@@ -1,4 +1,4 @@
-<section id="list-pane" class="row list">
+<section id="list-pane" class="list">
   <ul >
     {{ range .Data.Pages.ByPublishDate.Reverse }}
     <li class="list-entry">
