--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,4 +1,4 @@
-<section id="social-pane" class="row text-center social">
+<section id="social-pane" class="text-center social">
   {{ with .Site.Params.social.twitter }}
   <a href="https://twitter.com/{{.}}" aria-label="Twitter" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a>
   {{ end }}
