--- a/layouts/shortcodes/form-contact.html
+++ b/layouts/shortcodes/form-contact.html
@@ -5,11 +5,11 @@
   </div>
   <div class="form-group">
     <label for="email">{{ i18n "emailAddress" }}</label>
-    <input type="email" id="email" class="form-control" placeholder=""  aria-labelledby="email" required/>
+    <input type="email" id="email" name="email" class="form-control" placeholder=""  aria-labelledby="email" required/>
   </div>
   <div class="form-group">
     <label for="message">{{ i18n "message" }}</label>
-    <textarea name="message" id="message" class="form-control" placeholder="" aria-labelledby="message"></textarea>
+    <textarea name="message" id="message" class="form-control" placeholder="" aria-labelledby="message" required></textarea>
   </div>
   <button type="submit" class="btn btn-dark form-control">{{ i18n "send" }}</button>
 </form>
