Adds phone number input

--- a/layouts/shortcodes/form-contact.html
+++ b/layouts/shortcodes/form-contact.html
@@ -4,6 +4,10 @@
     <input type="text" id="name" name="name" class="form-control" placeholder="" aria-labelledby="name" required/>
   </div>
   <div class="form-group">
+    <label for="phone">{{ i18n "phoneNumber"}}</label>
+    <input type="text" id="phone" name="phone" class="form-control" placeholder="" aria-labelledby="">
+  </div>
+  <div class="form-group">
     <label for="email">{{ i18n "emailAddress" }}</label>
     <input type="email" id="email" name="email" class="form-control" placeholder=""  aria-labelledby="email" required/>
   </div>
