--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -153,7 +153,7 @@
     {{ with .Site.Params.social.twitch}}"https://www.twitch.tv/{{.}}",{{ end }}
     {{ with .Site.Params.social.soundcloud}}"https://soundcloud.com/{{.}}",{{ end }}
     {{ with .Site.Params.social.tumblr}}"https://{{.}}.tumblr.com",{{ end }}
-    {{ with .Site.Params.social.strava}}"https://www.strava.com/athletes/{{.}}",{{ end }},
+    {{ with .Site.Params.social.strava}}"https://www.strava.com/athletes/{{.}}",{{ end }}
     "{{ .Site.Params.baseURL }}"
   ]
 }
