--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,13 +10,13 @@
   {{ end }}
 
 <script type="text/javascript">
-hljs.initHighlightingOnLoad();
+// hljs.initHighlightingOnLoad();
 </script>
 {{ end }}
 {{ end }}
 
 {{ template "_internal/google_analytics_async.html" . }}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
 <script src="js/custom.js"></script>
