--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -6,7 +6,9 @@
   <h6 class="text-center powered">Powered by <a href="https://gohugo.io/">Hugo  v{{ hugo.Version }}</a> &amp; <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.</h6>
   {{ end }}
       {{ if ne .displayrssicon false }}
-      <h6><a href="{{ .RSSLink }}" aria-label="RSS Feed"><i class="fas fa-rss" aria-hidden="true"></i></a></h6>
+        {{ with .OutputFormats.Get "RSS" }}
+          <h6><a href="{{ .RelPermalink }}" aria-label="RSS Feed"><i class="fas fa-rss" aria-hidden="true"></i></a></h6>
+        {{ end }}
     {{ end }}
   {{ end }}
 </footer>
