--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -3,7 +3,7 @@
   {{ with .Site.Params.extra }}
   <h6 class="text-center copyright">{{ .copyright | markdownify }}</h6>
   {{ if ne .poweredby false }}
-  <h6 class="text-center powered">Powered by <a href="https://gohugo.io/">Hugo  v{{ hugo.Version }}</a> &amp; <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.</h6>
+  <h6 class="text-center powered">Powered by <a href="https://gohugo.io/">Hugo  v{{ hugo.Version }}</a> &amp; <a href="https://github.com/myspivey/hugo-goa">Goa</a>.</h6>
   {{ end }}
       {{ if ne .displayrssicon false }}
         {{ with .OutputFormats.Get "RSS" }}
