--- a/layouts/partials/main_menu.html
+++ b/layouts/partials/main_menu.html
@@ -1,6 +1,6 @@
 {{ with .Site.Menus.main }}
 <section id="main-menu-pane" class="text-center main-menu">
-  {{ range sort .Site.Menus.main }}
+  {{ range sort . }}
   <h4><a class="menu-item" href="{{ .URL }}">{{ .Name | lower }}</a></h4>
   {{ end }}
 </section>
