add buymeacoffee to social.html (#107)
Co-authored-by: Raj Shenoy <673924+kaapiandcode@users.noreply.github.com>

--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -104,6 +104,8 @@
   {{ with .Site.Params.social.whatsapp}}
   <a href="https://wa.me/{{.}}" aria-label="Whatsapp" target="_blank"><i class="fab fa-whatsapp" aria-hidden="true"></i></a>
   {{ end }}
+  {{ with .Site.Params.social.buymeacoffee}}
+  <a href="https://www.buymeacoffee.com//{{.}}" aria-label="Buymeacoffee" target="_blank"><i class="fas fa-coffee" aria-hidden="true"></i></a>
   {{ with .Site.Params.social.kaggle}}
   <a href="https://kaggle.com/{{.}}" aria-label="Kaggle" target="_blank"><i class="fab fa-kaggle" aria-hidden="true"></i></a>
   {{ end }}
@@ -157,6 +159,7 @@
     {{ with .Site.Params.social.soundcloud}}"https://soundcloud.com/{{.}}",{{ end }}
     {{ with .Site.Params.social.tumblr}}"https://{{.}}.tumblr.com",{{ end }}
     {{ with .Site.Params.social.strava}}"https://www.strava.com/athletes/{{.}}",{{ end }}
+    {{ with .Site.Params.social.buymeacoffee}}"https://www.buymeacoffee.com//{{.}}",{{ end }}
     {{ with .Site.Params.social.kaggle}}"https://www.kaggle.com/{{.}}",{{ end }}
     "{{ .Site.Params.baseURL }}"
   ]
