--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -113,6 +113,9 @@
   {{ with .Site.Params.social.kaggle}}
   <a href="https://kaggle.com/{{.}}" aria-label="Kaggle" target="_blank"><i class="fab fa-kaggle" aria-hidden="true"></i></a>
   {{ end }}
+  {{ with .Site.Params.social.holopin}}
+  <a href="https://www.holopin.io/{{.}}" aria-label="Holopin" target="_blank"><i class="fas fa-certificate" aria-hidden="true"></i></a>
+  {{ end }}
   {{ with .Site.Params.social.email }}
   <a href="mailto:{{.}}" aria-label="Email"><i class="fas fa-envelope" aria-hidden="true"></i></a>
   {{ end }}
@@ -166,6 +169,7 @@
     {{ with .Site.Params.social.strava}}"https://www.strava.com/athletes/{{.}}",{{ end }}
     {{ with .Site.Params.social.buymeacoffee}}"https://www.buymeacoffee.com//{{.}}",{{ end }}
     {{ with .Site.Params.social.kaggle}}"https://www.kaggle.com/{{.}}",{{ end }}
+    {{ with .Site.Params.social.holopin}}"https://www.holopin.io/{{.}}",{{ end }}
     "{{ .Site.Params.baseURL }}"
   ]
 }
