--- a/layouts/partials/error.html
+++ b/layouts/partials/error.html
@@ -1,4 +1,5 @@
 <section id="error-pane" class="text-center error">
   <h1 class="text-center">404</h1>
-  <p>Sorry! That page does not exist. It may have been removed or moved to a new section on the site. Click <a href="/">here</a> go back to the home page.</p>
+  <p>Sorry! That page does not exist. It may have been removed or moved to a new section on the site. Click <a
+      href="/">here</a> go back to the home page.</p>
 </section>
