--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,24 +1,21 @@
-
 {{ partial "sub_footer.html" . }}
 </div>
 
 {{ with .Site.Params.extra }}
 {{ if .highlightjs }}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-  {{ range .highlightjslanguages }}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+{{ range .highlightjslanguages }}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/{{.}}.min.js"></script>
-  {{ end }}
+{{ end }}
 
-<script type="text/javascript">
-hljs.initHighlightingOnLoad();
-</script>
+<script>hljs.highlightAll();</script>
 {{ end }}
 {{ end }}
 
 {{ template "_internal/google_analytics.html" . }}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="/js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="/js/custom.js"></script>
 </body>
+
 </html>
