--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -3,10 +3,15 @@
   {{ with .Site.Params.extra }}
   <h6 class="text-center copyright">{{ .copyright | markdownify }}</h6>
   {{ if ne .poweredby false }}
-  <h6 class="text-center powered">Powered by <a href="https://gohugo.io/">Hugo  v{{ hugo.Version }}</a> &amp; <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.</h6>
+  <h6 class="text-center powered"><a href="https://gohugo.io/">Hugo</a> <a
+      href="https://github.com/kaapiandcode/hugo-goa">Goa</a> by <a href="https://kaapiandco.de">KaapiandCode</a> and <a
+      href="https://incirclemedia.com">Incircle Media</a></h6>
   {{ end }}
-      {{ if ne .displayrssicon false }}
-      <h6><a href="{{ .RSSLink }}" aria-label="RSS Feed"><i class="fas fa-rss" aria-hidden="true"></i></a></h6>
-    {{ end }}
+  {{ if ne .displayrssicon false }}
+  <h6>
+    <a href="{{ "/index.xml" | absURL }}" aria-label="RSS Feed"><i class="fas fa-rss" aria-hidden="true"></i></a>
+  </h6>
   {{ end }}
+  {{ end }}
+
 </footer>
