--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -9,7 +9,7 @@
   {{ end }}
   {{ if ne .displayrssicon false }}
   <h6>
-    <a href="{{ "/index.xml" | absURL }}" aria-label="RSS Feed"><i class="fas fa-rss" aria-hidden="true"></i></a>
+    <a href="{{ "index.xml" | absURL }}" aria-label="RSS Feed"><i class="fas fa-rss" aria-hidden="true"></i></a>
   </h6>
   {{ end }}
   {{ end }}
