--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -4,7 +4,7 @@
   <h6 class="text-center copyright">{{ .copyright | markdownify }}</h6>
   {{ if ne .poweredby false }}
   <h6 class="text-center powered"><a href="https://gohugo.io/">Hugo</a> <a
-      href="https://github.com/kaapiandcode/hugo-goa">Goa</a> by <a href="https://kaapiandco.de">KaapiandCode</a> and <a
+      href="https://github.com/shenoydotme/hugo-goa">Goa</a> by <a href="https://shenoy.me">shenoydotme</a> and <a
       href="https://incirclemedia.com">Incircle Media</a></h6>
   {{ end }}
   {{ if ne .displayrssicon false }}
